SQLite ODBC Driver
------------------

Sat Apr 24 version 0.61 released

	* fixed getrowdata() to support SQLGetData() with NULL ptr and
	  SQLFetch() to retrieve proper data length, thanks to Joel Reed
	* fall back to integer primary key columns in SQLPrimaryKeys()
	  and SQLStatistics() when no indices on table found
	* improved auto increment detection

Thu Apr 08 2004 version 0.60 released

	* improved RPM .spec file
	* added heuristic to detect auto increment columns
	  (not a 100% solution yet) for better OpenOffice.org
	  support, thanks to Yves Chaufour for OOo testing
	* added property list function for unixODBC setup dialog
	* another SQLFreeStmt(...SQL_CLOSE) fix to make OOo work
	* added implemetation of SQLForeignKeys()
	* removed worker thread support, use sqlite_compile(),
	  sqlite_step(), sqlite_finalize() instead, DSN option to
	  use that feature is "StepAPI"
	* minimum required SQLite version is now 2.8.0

Sun Mar 21 2004 version 0.56 released

	* update to SQLite 2.8.13
	* fixes in UTF to unicode conversion
	* fixes in handling of length indicator in SQLBindParameter()
	* added SQL_{COLUMN,DESC}_{PRECISION,SCALE} to SQLColAttribute()
	* some unixODBC tweaks related to SQLError()/SQLGetDiagRec()
	* corrections in SQLError()/SQLGetDiagRec() handling,
	* fixed bugs in SQLColAttribute() which crashed OpenOffice.org
	* added SQL_FETCH_RELATIVE support as requested by Jorge Mason
	* fix in SQLFreeStmt(...SQL_CLOSE): don't unbind bound columns
	  thanks to Martin Saturka

Sat Jan 25 2004 version 0.55 released

	* update to SQLite 2.8.11
	* fixes in error messages
	* fixed SQL_IDENTIFIER_QUOTE_CHAR to be double-quote, thanks
	  to Mourad Ben Cheikh
	* minor fixes in functions related to SQLColAttribute(s)
	* started support of bookmarks
	* added SQL_DYNAMIC_CURSOR_ATTRIBUTES1 in drvgetinfo(),
	  thanks to Jeff Robbins
	* changed "numeric" in mapsqltype() to return SQL_DOUBLE,
	  thanks to Cristian Guissani