@@ -184,7 +184,7 @@ TODO:
 - improve documentation
 
 
-April, 24th, 2004
+May, 1st, 2004
 Christian Werner
 mailto:chw@ch-werner.de
 
